<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/add_question_level_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_question_levels_for"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/add_question_level_question_text_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginStart="4dp"
        app:layout_constraintTop_toTopOf="@id/add_question_level_text_view"
        app:layout_constraintBottom_toBottomOf="@id/add_question_level_text_view"
        app:layout_constraintStart_toEndOf="@id/add_question_level_text_view"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/add_question_level_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_question_level_text_view"
        app:layout_constraintBottom_toTopOf="@id/add_question_level_add_level_button"/>

    <Button
        android:id="@+id/add_question_level_add_level_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_question_level"
        app:layout_constraintBottom_toTopOf="@id/add_question_level_submit_button"/>

    <Button
        android:id="@+id/add_question_level_submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>